--- a/kilo/templates/kilo/base.html
+++ b/kilo/templates/kilo/base.html
@@ -9,6 +9,7 @@
         integrity="sha512-cznfNokevSG7QPA5dZepud8taylLdvgr0lDqw/FEZIhluFsSwyvS81CMnRdrNSKwbsmc43LtRd2/WMQV+Z85AQ=="
         crossorigin="anonymous">
   </link>
+  <link rel="stylesheet" href="{% static "choices.js/public/assets/styles/choices.css" %}" />
 {% endblock style %}
 
 {% block js %}{{ block.super }}
@@ -16,6 +17,7 @@
   <script src="{% static "d3/dist/d3.min.js" %}"></script>
   <script src="{% static "c3/c3.min.js" %}"></script>
   <script src="{% static "alpinejs/dist/cdn.min.js" %}"></script>
+  <script src="{% static "choices.js/public/assets/scripts/choices.min.js" %}"></script>
   <script src="{% static "kilo/js/utils.js" %}"></script>
 {% endblock js %}
 
@@ -65,7 +67,7 @@
       </ul>
       <br />
     {% endif %}
-    <div id="panel">
+    <div id="panel" hx-on:htmx:after-swap="initDropdowns(event)">
       <div class="loading">
         <div class="spinner-grow text-secondary m-3" role="status"></div>
         <div class="spinner-grow text-secondary m-3" role="status"></div>
