--- a/orange/templates/orange/base.html
+++ b/orange/templates/orange/base.html
@@ -8,8 +8,9 @@
         <link rel="stylesheet" type="text/css" href="{% static "@fortawesome/fontawesome-free/css/all.css" %}" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
               rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
-              crossorigin="anonymous">
-        </link>
+              crossorigin="anonymous" />
+        <link rel="stylesheet" href="{% static "choices.js/public/assets/styles/choices.css" %}" />
+        <link rel="stylesheet" type="text/less" href="{% static "orange/style/choices.less" %}" />
         {% block style %}
         {% endblock style %}
 
@@ -17,6 +18,8 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
                 crossorigin="anonymous"></script>
+        <script src="{% static "less/dist/less.min.js" %}"></script>
+        <script src="{% static "choices.js/public/assets/scripts/choices.min.js" %}"></script>
     </head>
     <body>
         {% block body %}
