--- a/rhyme/templates/rhyme/network.html
+++ b/rhyme/templates/rhyme/network.html
@@ -9,7 +9,7 @@
 {% block visualization %}
 <div class="card float-end" id="network-controls">
   <div class="card-body d-grid gap-2">
-    <select class="select2" name="category">
+    <select class="choices-js" name="category">
         <option value="">(All Categories)</option>
         {% for category in categories %}
             <option>{{ category }}</option>
